Fix up some test runner issues
Clean up dockerfile build by using devkitarm base image to get devkitpro
tools. Also upload artifacts after running, and fix some issues due to
Github Actions working slightly different than plain docker.

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -28,6 +28,8 @@ runs:
 
     - name: Set up Rust cache
       uses: Swatinem/rust-cache@v2
+      with:
+        shared-key: rust3ds
 
     - name: Install build tools for host
       shell: bash
