--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,8 +63,7 @@ jobs:
         run: cargo 3ds test --no-run --test integration
 
       - name: Build doc tests
-        # need build-std=test until https://github.com/rust3ds/cargo-3ds/pull/42
-        run: cargo 3ds test --doc -Zbuild-std=std,test
+        run: cargo 3ds test --no-run --doc
 
       - name: Run lib + integration tests
         uses: ./.github/actions/citra
@@ -74,3 +73,12 @@ jobs:
       # TODO: run doc tests. We might be able to do something with e.g.
       # cargo's "runner" configuration, but it seems we also need a test
       # runtime and stuff for that to work.
+
+      - name: Upload citra logs and capture videos
+        uses: actions/upload-artifact@v3
+        if: success() || failure()
+        with:
+          name: citra-logs-${{ matrix.toolchain }}
+          path: |
+            target/armv6k-nintendo-3ds/debug/deps/*.txt
+            target/armv6k-nintendo-3ds/debug/deps/*.webm
