--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,6 @@ on:
       - main
   workflow_dispatch:
 
-env:
-  # actions-rust-lang/setup-rust-toolchain sets some default RUSTFLAGS, which we don't want to use
-  RUSTFLAGS: ""
-
 jobs:
   lint:
     strategy:
@@ -34,8 +30,7 @@ jobs:
         run: cargo fmt --all --verbose -- --check
 
       - name: Run clippy
-        # We have to build the test crate here since it's not included in build-std by default
-        run: cargo 3ds clippy -Zbuild-std=std,test --color=always --verbose --all-targets
+        run: cargo 3ds clippy --color=always --verbose --all-targets
 
   test:
     strategy:
@@ -47,7 +42,6 @@ jobs:
 
     continue-on-error: ${{ matrix.toolchain == 'nightly' }}
     runs-on: ubuntu-latest
-    container: devkitpro/devkitarm
     steps:
       - name: Checkout branch
         uses: actions/checkout@v3
@@ -56,29 +50,26 @@ jobs:
         with:
           toolchain: ${{ matrix.toolchain }}
 
-      - name: Build lib tests
-        run: cargo 3ds test --no-run --lib
+      - name: Build and run tests (unit + integration)
+        uses: ./.github/actions/test
 
-      - name: Build integration tests
-        run: cargo 3ds test --no-run --test integration
-
-      - name: Build doc tests
-        run: cargo 3ds test --no-run --doc
-
-      - name: Run lib + integration tests
-        uses: ./.github/actions/citra
+      - name: Build and run doc tests
+        # Let's still run doc tests even if lib/integration tests fail:
+        if: ${{ !cancelled() }}
+        env:
+          # This ensures the citra logs and video output gets put in a directory
+          # where we can upload as artifacts
+          RUSTDOCFLAGS: " --persist-doctests target/armv6k-nintendo-3ds/debug/doctests"
+        uses: ./.github/actions/test
         with:
-          executable:  ./target/armv6k-nintendo-3ds/debug/deps/*.elf
-
-      # TODO: run doc tests. We might be able to do something with e.g.
-      # cargo's "runner" configuration, but it seems we also need a test
-      # runtime and stuff for that to work.
+          args: --doc
 
       - name: Upload citra logs and capture videos
         uses: actions/upload-artifact@v3
-        if: success() || failure()
+        # We always want to upload artifacts regardless of previous success/failure
+        if: ${{ !cancelled() }}
         with:
           name: citra-logs-${{ matrix.toolchain }}
           path: |
-            target/armv6k-nintendo-3ds/debug/deps/*.txt
-            target/armv6k-nintendo-3ds/debug/deps/*.webm
+            target/armv6k-nintendo-3ds/debug/**/*.txt
+            target/armv6k-nintendo-3ds/debug/**/*.webm
