Fix ENV from devkitarm image in dockerfile
Also try to fix citra download even though I don't know what's wrong
yet.

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -17,12 +17,13 @@ runs:
       with:
         components: clippy, rustfmt, rust-src
         toolchain: ${{ inputs.toolchain }}
+        cache: "false" # We set up our own cache manually in the next step
         rustflags: ""
 
     - name: Set up Rust cache
       uses: Swatinem/rust-cache@v2
       with:
-        shared-key: rust3ds
+        cache-on-failure: "true"
 
     - name: Install build tools for host
       shell: bash
