--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,11 @@ jobs:
 
     continue-on-error: ${{ matrix.toolchain == 'nightly' }}
     runs-on: ubuntu-latest
+    container:
+      image: devkitpro/devkitarm
+      volumes:
+        - '/var/run/docker.sock:/var/run/docker.sock'
+
     steps:
       - name: Checkout branch
         uses: actions/checkout@v3
@@ -52,6 +57,8 @@ jobs:
 
       - name: Build and run tests (unit + integration)
         uses: ./.github/actions/test
+        with:
+          args: -- -v
 
       - name: Build and run doc tests
         # Let's still run doc tests even if lib/integration tests fail:
@@ -62,7 +69,7 @@ jobs:
           RUSTDOCFLAGS: " --persist-doctests target/armv6k-nintendo-3ds/debug/doctests"
         uses: ./.github/actions/test
         with:
-          args: --doc
+          args: --doc -- -v
 
       - name: Upload citra logs and capture videos
         uses: actions/upload-artifact@v3
