Minor docker cleanup

--- a/run-tests/Dockerfile
+++ b/run-tests/Dockerfile
@@ -8,7 +8,7 @@ ARG CITRA_CHANNEL=nightly
 ARG CITRA_RELEASE=1995
 RUN download_citra ${CITRA_CHANNEL} ${CITRA_RELEASE}
 
-FROM devkitpro/devkitarm as devkitarm
+FROM devkitpro/devkitarm:latest as devkitarm
 
 # For some reason, citra isn't always happy when you try to run it for the first time,
 # so we build a simple dummy program to force it to create its directory structure
