--- a/run-tests/docker/sdl2-config.ini
+++ b/run-tests/docker/sdl2-config.ini
@@ -1,3 +1,8 @@
+# OpenGL renderer seems to crash so we force using vulkan:
+# https://github.com/rust3ds/test-runner/issues/16
+[Renderer]
+graphics_api = 2
+
 [Miscellaneous]
 log_filter = *:Info Debug.Emulated:Debug
 
