--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           - nightly
         ctru-rs-ref:
           # "known good" version of `test-runner` crate
-          - 3247af67d5f9aafb0ea4af485a81b74ce922c8af
+          - 3247af67d
           - master
 
     continue-on-error: ${{ matrix.toolchain == 'nightly' || matrix.ctru-rs-ref == 'master' }}
@@ -66,7 +66,7 @@ jobs:
         # We always want to upload artifacts regardless of previous success/failure
         if: ${{ !cancelled() }}
         with:
-          name: citra-logs-${{ matrix.toolchain }}
+          name: citra-logs-${{ matrix.toolchain }}-${{ matrix.ctru-rs-ref }}
           path: |
             ctru-rs/target/armv6k-nintendo-3ds/debug/**/*.txt
             ctru-rs/target/armv6k-nintendo-3ds/debug/**/*.webm
